--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Robert De Niro | Resume</title>
-</head>
+  <link rel="stylesheet" href="css/style.css"
+</head> 
 <body>
   <header>
     <h1>Robert De Niro</h1>
